--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Open Sans Regular';
+    font-family: 'Open Sans Bold';
     src: url('/fonts/OpenSans/OpenSans-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
@@ -28,4 +28,11 @@
 
 body {
     font-family: "Open Sans Regular";
+}
+
+@font-face {
+    font-family: 'Lobster Regular';
+    src: url('/fonts/Lobster/Lobster-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
